--- a/Game.html
+++ b/Game.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset = "UTF-8">
     <title> Game </title>
-    <link rel="stylesheet" href="chess.css">
+    <link rel="stylesheet" href="Game.css">
 </head>
 <div id = plateau></div>
-<script src="chess.js"></script>
+<script src="Game.js"></script>
