--- a/Game.html
+++ b/Game.html
@@ -7,4 +7,5 @@
     <link rel="stylesheet" href="Game.css">
 </head>
 <div id = plateau></div>
+<script src="JQuery.js"></script>
 <script src="Game.js"></script>
