--- a/Game.html
+++ b/Game.html
@@ -8,4 +8,4 @@
 </head>
 <div id = plateau></div>
 <script src="JQuery.js"></script>
-<script src="Game.js"></script>
+<script src="main.js"></script>
