Mise en Place de Less

--- a/Game.html
+++ b/Game.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset = "UTF-8">
     <title> Game </title>
-    <link rel="stylesheet" href="Game.css">
+    <link rel="stylesheet" href="Game.less">
 </head>
 <div id = plateau></div>
 <script src="JQuery.js"></script>
+<script src="Less.js"></script>
 <script src="main.js"></script>
