--- a/index.html
+++ b/index.html
@@ -7,5 +7,5 @@
 </head>
 <div id = plateau></div>
 <script src="JQuery.js"></script>
-<script src="Less.js"></script>
+<script src="less.min.js"></script>
 <script src="main.js"></script>
