--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 
 <head>
-    <meta charset = "UTF-8">
-    <title> Game </title>
-    <link rel="stylesheet" href="Game.less">
+	<meta charset = "UTF-8">
+	<title> Game </title>
+	<link rel="stylesheet" href="Game.less">
 </head>
-<div id = plateau></div>
+<div id= plateau class="plat"></div>
+<input type="button" value="Restart" onclick="res()"></ins>
 <script src="JQuery.js"></script>
 <script src="less.min.js"></script>
 <script src="main.js"></script>
