déplacement fonctionnellesur une case

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" href="Game.less">
 </head>
 <div id= plateau class="plat"></div>
-<input type="button" value="Restart" onclick="res()"></ins>
+<input type="button" value="Restart" onclick="window.onload()"></ins>
 <script src="JQuery.js"></script>
 <script src="less.min.js"></script>
 <script src="main.js"></script>
