--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
 	<link rel="stylesheet" href="Game.less">
 </head>
 <div id= plateau class="plat"></div>
-<input type="button" value="Restart" onclick="window.onload()"></ins>
+<div class="bouton">
+	<p>
+		<a onclick="window.onload()">Restart</a>
+	</p>
+</div>
 <script src="JQuery.js"></script>
 <script src="less.min.js"></script>
 <script src="main.js"></script>
