--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
 		<a onclick="window.onload()">Restart</a>
 	</p>
 </div>
+<div class="cadre">
+	<img src="images/encad.jpg" width=390px height=320px class="imgs">
+	<p> Joueur : </p>
+</div>
 <script src="JQuery.js"></script>
 <script src="less.min.js"></script>
 <script src="main.js"></script>
